@@ -1,3 +1,6 @@
+- Allow multiple routes separated by commas in '-r', for osg-promote
+  and fix usage message (SOFTWARE-1390)
+
 * Tue Feb 25 2014 Carl Edquist <edquist@cs.wisc.edu> - 1.3.4
 - change 'contrib' promotion path to go from development -> contrib instead
   of testing -> contrib, per the new osg-contrib policy.  (SOFTWARE-1405)
